fix: The display overlap issue of the moblie version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,12 +79,18 @@ body {
   color: #F9F9F9;
 }
 
-@media (max-width: 990px) {
+@media (max-width: 1024px) {
   .sidebar {
     background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(5px);
   }
+
+  .home-background {
+    height: unset;
+    padding-bottom: 20%;
+  }
 }
+
 
 /*---------------------------------------------alert--*/
 .navalert-container .col-12 {
@@ -158,7 +164,7 @@ footer {
 /*---------------------------------------------callout--*/
 
 .callout-position {
-  margin-top: 7%;
+  margin-top: 10%;
 }
 
 
